KnowledgeCenter/e-Tax Invoice/3-saminar_07-2019.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Tax Invoice/3-saminar_07-2019.md
+++ b/KnowledgeCenter/e-Tax Invoice/3-saminar_07-2019.md
@@ -1,14 +1,11 @@
-เอกสารสัมมนา กรมสรรพากร (ก.ค. 2562)</h1> 
-
----
-
-
-
-
+เอกสารสัมมนา กรมสรรพากร (ก.ค. 2562)
+=======================
 
 
 
 ![e-tax1.jpg](https://github.com/yosarawut/WorkingArea/raw/master/e-tax-invoice/img/present-rd_06-2019/e-tax/e-tax1.jpg)
+
+## หัวข้อการนำเสนอ
 
 ![e-tax2.jpg](https://github.com/yosarawut/WorkingArea/raw/master/e-tax-invoice/img/present-rd_06-2019/e-tax/e-tax2.jpg)
 
@@ -16,6 +13,7 @@
 
 ![e-tax3.jpg](https://github.com/yosarawut/WorkingArea/raw/master/e-tax-invoice/img/present-rd_06-2019/e-tax/e-tax1.jpg)
 
+## ความรับผิดในการเสียภาษีมูลค่าเพิ่ม (Tax Point)
 ![e-tax4.jpg](https://github.com/yosarawut/WorkingArea/raw/master/e-tax-invoice/img/present-rd_06-2019/e-tax/e-tax4.jpg)
 
 ## หน้าที่ผู้ประกอบการจดทะเบียนมูลค่าเพิ่ม
@@ -99,5 +97,5 @@
 
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU5MDM3NTIyNV19
+eyJoaXN0b3J5IjpbLTE1MTc2MzY4NDNdfQ==
 -->
