--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -1,11 +1,12 @@
+## สิทธิประโยชน์ทางภาษีอากร
 
-สิทธิขอคืนอากรตามมาตรา 29 ให้ระบุค่าดังนี้
-–	ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
-–	ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
-–	ระบุ Privilege Code 
-(ก) กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
+### สิทธิขอคืนอากรตามมาตรา 29 ให้ระบุค่าดังนี้
+- ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
+- ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
+- ระบุ Privilege Code 
+	1. กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-(ข) กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
+กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
 –	การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
 (ก) ชำระอากรเต็มจำนวน 
 (ข) ลดเหลือกึ่งหนึ่งจากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
@@ -85,5 +86,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzYyNzYxMDM0XX0=
+eyJoaXN0b3J5IjpbMjAzMjY4ODc0MF19
 -->
