KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -1,6 +1,6 @@
 ## สิทธิประโยชน์ทางภาษีอากร
 
-### สิทธิขอคืนอากรตามมาตรา 29 ให้ระบุค่าดังนี้
+### สิทธิขอคืนอากรตามมาตรา 29
 - ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
 - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
 - ระบุ Privilege Code 
@@ -18,11 +18,11 @@
 				- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
 				- การวางประกันให้ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล
  
-  สิทธิคลังสินค้าทัณฑ์บน ให้ระบุค่าดังนี้
-–	ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
-–	ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
+### สิทธิคลังสินค้าทัณฑ์บน
+- ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
+- ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
 เข้าเก็บ ที่ส่วนรายการในใบขนสินค้า
-–	ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนคลังสินค้าทัณฑ์บน หรือผู้ที่เจ้าของคลังแจ้งอนุญาตไว้กับกรมศุลกากร
+- ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนคลังสินค้าทัณฑ์บน หรือผู้ที่เจ้าของคลังแจ้งอนุญาตไว้กับกรมศุลกากร
 –	ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
 –	ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
 –	ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากร ที่นำของเข้า (First Port)
@@ -86,5 +86,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwMzgyMDc4MDZdfQ==
+eyJoaXN0b3J5IjpbLTEzNDE3MTA0NDddfQ==
 -->
