KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -23,14 +23,15 @@
 - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
 เข้าเก็บ ที่ส่วนรายการในใบขนสินค้า
 - ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนคลังสินค้าทัณฑ์บน หรือผู้ที่เจ้าของคลังแจ้งอนุญาตไว้กับกรมศุลกากร
-–	ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-–	ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
-–	ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากร ที่นำของเข้า (First Port)
-–	ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)  
+- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
+- ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
+- ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากร ที่นำของเข้า (First Port)
+- ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)  
  
- ใช้สิทธิเขตปลอดอากร ให้ระบุค่าดังนี้
-–	ระบุ Free Zone = Y ที่ส่วนรายการในใบขนสินค้า
-–	ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
+### สิทธิเขตปลอดอากร (Free Zone)
+
+- ระบุ Free Zone = Y ที่ส่วนรายการในใบขนสินค้า
+- ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
 เข้าเก็บ ที่ส่วนรายการในใบขนสินค้า
 –	ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนผู้ประกอบการในเขต Free Zone หรือ ผู้ที่ผู้ประกอบการในเขต Free Zone แจ้งอนุญาตไว้กับกรมศุลกากร
 –	ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
@@ -86,5 +87,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDE3MTA0NDddfQ==
+eyJoaXN0b3J5IjpbLTExOTI4Nzg4MzQsLTEzNDE3MTA0NDddfQ
+==
 -->
