KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -33,13 +33,14 @@
 - ระบุ Free Zone = Y ที่ส่วนรายการในใบขนสินค้า
 - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
 เข้าเก็บ ที่ส่วนรายการในใบขนสินค้า
-–	ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนผู้ประกอบการในเขต Free Zone หรือ ผู้ที่ผู้ประกอบการในเขต Free Zone แจ้งอนุญาตไว้กับกรมศุลกากร
-–	ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-–	ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
-–	ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากรที่
+- ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนผู้ประกอบการในเขต Free Zone หรือ ผู้ที่ผู้ประกอบการในเขต Free Zone แจ้งอนุญาตไว้กับกรมศุลกากร
+- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
+- ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
+- ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากรที่
 นำของเข้า (First Port) หรือโรงพักสินค้าหรือที่มั่นคง ซึ่งเป็นที่ตรวจและเก็บสินค้าดังกล่าว
-–	ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
- ใช้สิทธิเขตประกอบการเสรี ให้ระบุค่าดังนี้
+- ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
+- 
+### สิทธิเขตประกอบการเสรี (นิคม
 –	ระบุ I-EA-T = Y ที่ส่วนรายการในใบขนสินค้า
 –	ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
 เข้าเก็บ ที่ส่วนรายการในใบขนสินค้า
@@ -87,6 +88,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExOTI4Nzg4MzQsLTEzNDE3MTA0NDddfQ
-==
+eyJoaXN0b3J5IjpbMTY2NTU1Nzk3NSwtMTM0MTcxMDQ0N119
 -->
