KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -40,14 +40,14 @@
 นำของเข้า (First Port) หรือโรงพักสินค้าหรือที่มั่นคง ซึ่งเป็นที่ตรวจและเก็บสินค้าดังกล่าว
 - ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
 - 
-### สิทธิเขตประกอบการเสรี (นิคม
-–	ระบุ I-EA-T = Y ที่ส่วนรายการในใบขนสินค้า
-–	ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
+### สิทธิเขตประกอบการเสรี (นิคมอุตสาหกรรม)
+- ระบุ I-EA-T = Y ที่ส่วนรายการในใบขนสินค้า
+- ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
 เข้าเก็บ ที่ส่วนรายการในใบขนสินค้า
-–	ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนผู้ประกอบการในเขตประกอบการเสรี หรือ ผู้ที่ผู้ประกอบการในเขตประกอบการเสรี แจ้งอนุญาตไว้กับกรมศุลกากร
-–	ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-–	ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
-–	ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากรที่
+- ให้ระบุเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้าตรงกับเลขประจำตัวผู้เสียภาษีอากรที่จดทะเบียนผู้ประกอบการในเขตประกอบการเสรี หรือ ผู้ที่ผู้ประกอบการในเขตประกอบการเสรี แจ้งอนุญาตไว้กับกรมศุลกากร
+- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
+- ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
+- ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากรที่
 นำของเข้า (First Port) หรือโรงพักสินค้าหรือที่มั่นคง ซึ่งเป็นที่ตรวจและเก็บสินค้าดังกล่าว
 –	ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
  
@@ -88,5 +88,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2NTU1Nzk3NSwtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbMTU5ODI3MTg2NywtMTM0MTcxMDQ0N119
 -->
