--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -49,23 +49,23 @@
 - ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
 - ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากรที่
 นำของเข้า (First Port) หรือโรงพักสินค้าหรือที่มั่นคง ซึ่งเป็นที่ตรวจและเก็บสินค้าดังกล่าว
-–	ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
+- ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
  
- ขอใช้สิทธิส่งเสริมการลงทุน
- สิทธิส่งเสริมการลงทุน BOI ให้ระบุค่าดังนี้
-–	ระบุ BOI = Y ที่ส่วนรายการในใบขนสินค้า
-–	ระบุ เลขที่บัตรส่งเสริมการลงทุน BOI ในช่อง BOI License Number ที่ส่วนรายการในใบขนสินค้า
-–	Privilege Code = 000 ตามอัตราปกติ หรือ 999 ตามพระราชกำหนด เท่านั้น
-–	ระบุเลขที่อนุมัติสั่งปล่อยของ BOI ส่วนใบอนุญาต 
-–	การชำระอากร ให้ระบุ Exemption Rate = ตามที่ BOI อนุมัติให้ เช่น
-(ก) ยกเว้นอากร ให้บันทึก Exemption Rate = 100 
-(ข) ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = 50 
-(ค) ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = 95 
-–	การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D10) ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการ
-ใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
-(ก) อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
-(ข) VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
-–	ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น
+### สิทธิส่งเสริมการลงทุน (BOI)
+
+- ระบุ BOI = Y ที่ส่วนรายการในใบขนสินค้า
+- ระบุ เลขที่บัตรส่งเสริมการลงทุน BOI ในช่อง BOI License Number ที่ส่วนรายการในใบขนสินค้า
+- Privilege Code = 000 ตามอัตราปกติ หรือ 999 ตามพระราชกำหนด เท่านั้น
+- ระบุเลขที่อนุมัติสั่งปล่อยของ BOI ส่วนใบอนุญาต 
+- การชำระอากร ให้ระบุ Exemption Rate = ตามที่ BOI อนุมัติให้ เช่น
+		- ยกเว้นอากร ให้บันทึก Exemption Rate = 100 
+		- ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = 50 
+		- ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = 95 
+		- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D10) ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
+				- อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
+				- VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
+
+> **ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น**
 
  
  ขอใช้สิทธิคืนอากรขาเข้า ตามมาตรา 28 
@@ -88,5 +88,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU5ODI3MTg2NywtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbNzkzNjMzODQsLTEzNDE3MTA0NDddfQ==
 -->
