KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -62,8 +62,7 @@
 		- ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = 50 
 		- ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = 95 
 		- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D10) ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
-
-				 - อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
+				- อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
 				 - VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
 
 
@@ -71,9 +70,8 @@
 > **ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น**
 
  
- ขอใช้สิทธิคืนอากรขาเข้า ตามมาตรา 28 
- สิทธิคืนอากรของส่งกลับไปยังต่างประเทศ (Re-Export) ตามมาตรา  28 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560 
-(1) ผู้นำของเข้ามาในราชอาณาจักรและเสียอากรแล้ว หากส่งของนั้นกลับออกไปนอกราชอาณาจักร หรือส่งไปเป็นของใช้สิ้นเปลืองในเรือหรืออากาศยานที่เดินทางออกไปนอกราชอาณาจักรให้มีสิทธิขอคืนอากร
+### สิทธิคืนอากรขาเข้า ตามมาตรา 28  (Re-Export)
+สิทธิคืนอากรของส่งกลับไปยังต่างประเทศ (Re-Export) ตามมาตรา  28 แห่งพระราชบัญญัติศุลกากร 1. ผู้นำของเข้ามาในราชอาณาจักรและเสียอากรแล้ว หากส่งของนั้นกลับออกไปนอกราชอาณาจักร หรือส่งไปเป็นของใช้สิ้นเปลืองในเรือหรืออากาศยานที่เดินทางออกไปนอกราชอาณาจักรให้มีสิทธิขอคืนอากร
 ขาเข้าสำหรับของนั้นเก้าในสิบส่วนหรือส่วนที่เกินหนึ่งพันบาทของจำนวนที่ได้เรียกเก็บไว้โดยคำนวณตาม
 ใบขนสินค้าขาออกแต่ละฉบับ แล้วแต่จำนวนใดจะสูงกว่า ตามหลักเกณฑ์ดังต่อไปนี้
 (ก) ต้องพิสูจน์ได้ว่าเป็นของรายเดียวกันกับที่นำเข้ามาในราชอาณาจักร
@@ -91,5 +89,5 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA0MDg3NjkwMiwtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbLTU3Mjg5NjcwNSwtMTM0MTcxMDQ0N119
 -->
