--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -71,23 +71,23 @@
 
  
 ### สิทธิคืนอากรขาเข้า ตามมาตรา 28  (Re-Export)
-สิทธิคืนอากรของส่งกลับไปยังต่างประเทศ (Re-Export) ตามมาตรา  28 แห่งพระราชบัญญัติศุลกากร 1. ผู้นำของเข้ามาในราชอาณาจักรและเสียอากรแล้ว หากส่งของนั้นกลับออกไปนอกราชอาณาจักร หรือส่งไปเป็นของใช้สิ้นเปลืองในเรือหรืออากาศยานที่เดินทางออกไปนอกราชอาณาจักรให้มีสิทธิขอคืนอากร
+สิทธิคืนอากรของส่งกลับไปยังต่างประเทศ (Re-Export) ตามมาตรา  28 แห่งพระราชบัญญัติศุลกากร 
+1. ผู้นำของเข้ามาในราชอาณาจักรและเสียอากรแล้ว หากส่งของนั้นกลับออกไปนอกราชอาณาจักร หรือส่งไปเป็นของใช้สิ้นเปลืองในเรือหรืออากาศยานที่เดินทางออกไปนอกราชอาณาจักรให้มีสิทธิขอคืนอากร
 ขาเข้าสำหรับของนั้นเก้าในสิบส่วนหรือส่วนที่เกินหนึ่งพันบาทของจำนวนที่ได้เรียกเก็บไว้โดยคำนวณตาม
 ใบขนสินค้าขาออกแต่ละฉบับ แล้วแต่จำนวนใดจะสูงกว่า ตามหลักเกณฑ์ดังต่อไปนี้
-(ก) ต้องพิสูจน์ได้ว่าเป็นของรายเดียวกันกับที่นำเข้ามาในราชอาณาจักร
-(ข) ต้องไม่นำของนั้นไปใช้ประโยชน์ในระหว่างที่อยู่ในราชอาณาจักร เว้นแต่การใช้ประโยชน์เพื่อส่งของนั้นกลับออกไปนอกราชอาณาจักร และมิได้เปลี่ยนแปลงสภาพหรือลักษณะแห่งของนั้น
-(ค) ได้ส่งของนั้นกลับออกไปนอกราชอาณาจักรภายในกำหนดหนึ่งปีนับแต่วันที่นำของนั้นเข้ามาในราชอาณาจักร และ
-(ง) ต้องขอคืนอากรภายในกำหนดหกเดือนนับแต่วันที่ส่งของนั้นกลับออกไปนอกราชอาณาจักร
-(2) กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรยังมิได้มีการปล่อยออกไปจากอารักขาของศุลกากร 
-(2.1) ให้ระบุค่าดังนี้
-- ระบุ Re-Export  = Y ที่ส่วนรายการในใบขนสินค้าทุกรายการ
-- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า
-- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น
-- ระบุ Tariff Code = พิกัดอัตราศุลกากรให้ตรงกับชนิดของที่จะส่งกลับออกไป
-- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
+	- ต้องพิสูจน์ได้ว่าเป็นของรายเดียวกันกับที่นำเข้ามาในราชอาณาจักร
+	- ต้องไม่นำของนั้นไปใช้ประโยชน์ในระหว่างที่อยู่ในราชอาณาจักร เว้นแต่การใช้ประโยชน์เพื่อส่งของนั้นกลับออกไปนอกราชอาณาจักร และมิได้เปลี่ยนแปลงสภาพหรือลักษณะแห่งของนั้น
+	- ได้ส่งของนั้นกลับออกไปนอกราชอาณาจักรภายในกำหนดหนึ่งปีนับแต่วันที่นำของนั้นเข้ามาในราชอาณาจักร และ
+	- ต้องขอคืนอากรภายในกำหนดหกเดือนนับแต่วันที่ส่งของนั้นกลับออกไปนอกราชอาณาจักร
+2. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรยังมิได้มีการปล่อยออกไปจากอารักขาของศุลกากร 
+	- ระบุ Re-Export  = Y ที่ส่วนรายการในใบขนสินค้าทุกรายการ
+	- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า
+	- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น
+	- ระบุ Tariff Code = พิกัดอัตราศุลกากรให้ตรงกับชนิดของที่จะส่งกลับออกไป
+	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
 
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU3Mjg5NjcwNSwtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbMTI0NzU0MDc1NSwtMTM0MTcxMDQ0N119
 -->
