KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -80,8 +80,8 @@
 	- ได้ส่งของนั้นกลับออกไปนอกราชอาณาจักรภายในกำหนดหนึ่งปีนับแต่วันที่นำของนั้นเข้ามาในราชอาณาจักร และ
 	- ต้องขอคืนอากรภายในกำหนดหกเดือนนับแต่วันที่ส่งของนั้นกลับออกไปนอกราชอาณาจักร
 2. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรยังมิได้มีการปล่อยออกไปจากอารักขาของศุลกากร 
-	- ระบุ Re-Export  = Y ที่ส่วนรายการในใบขนสินค้าทุกรายการ
-	- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า
+	- **ระบุ Re-Export  = Y ที่ส่วนรายการในใบขนสินค้าทุกรายการ**
+	- มีเงื่อนไขต้องส่งกลับออกไปนอกราชอาณาจักรทั้งฉบับ โดยให้ __ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท__ ต่อใบขนสินค้าขาเข้า
 	- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น
 	- ระบุ Tariff Code = พิกัดอัตราศุลกากรให้ตรงกับชนิดของที่จะส่งกลับออกไป
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
@@ -89,5 +89,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI0NzU0MDc1NSwtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbMTgyMDY0NTEyMywxMjQ3NTQwNzU1LC0xMz
+QxNzEwNDQ3XX0=
 -->
