KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -85,13 +85,13 @@
 	- ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น
 	- ระบุ Tariff Code = พิกัดอัตราศุลกากรให้ตรงกับชนิดของที่จะส่งกลับออกไป
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
-4. ให้จัดทำใบขนสินค้าขาเข้าก่อนและนำเลขที่ใบขนสินค้าขาเข้าพร้อมรายการไปบันทึกไว้ใน
+>4. ให้จัดทำใบขนสินค้าขาเข้าก่อนและนำเลขที่ใบขนสินค้าขาเข้าพร้อมรายการไปบันทึกไว้ใน
 ใบขนสินค้าขาออก
-5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร อยู่นอกอารักขาของศุลกากรแล้ว ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
-6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น
+5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร **อยู่นอกอารักขาของศุลกากรแล้ว** ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
+6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า **เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น**
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyNDMwMDY5OSwxMjQ3NTQwNzU1LC0xMz
-QxNzEwNDQ3XX0=
+eyJoaXN0b3J5IjpbLTk5MTg2NjMzNSwtMTI0MzAwNjk5LDEyND
+c1NDA3NTUsLTEzNDE3MTA0NDddfQ==
 -->
