--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -7,16 +7,15 @@
 	1. กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
 	2. กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
-		2.1 การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
-					* ชำระอากรเต็มจำนวน 
-					* ลดเหลือกึ่งหนึ่งจากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
-					- ลดเหลือร้อยละ 5 จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ Gold Card) ให้บันทึก Exemption Rate = 95 
-		2.2 วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดยระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09) ที่ส่วนรายการในใบขนสินค้า (Deposit) ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการ
-ในใบขนสินค้า (Deposit)
-				- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
-				- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
-				- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
-				- การวางประกันให้ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล
+		- การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
+					- ชำระอากรเต็มจำนวน 
+					- ลดเหลือกึ่งหนึ่งจากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
+						- ลดเหลือร้อยละ 5 จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ Gold Card) ให้บันทึก Exemption Rate = 95 
+		- วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดยระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09) ที่ส่วนรายการในใบขนสินค้า (Deposit) ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
+					- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
+					- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
+					- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
+					- การวางประกันให้ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล
  
 ### สิทธิคลังสินค้าทัณฑ์บน
  - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
@@ -92,6 +91,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0NzIxMDk1LC0xMjQzMDA2OTksMTI0Nz
-U0MDc1NSwtMTM0MTcxMDQ0N119
+eyJoaXN0b3J5IjpbLTczNDM3OTgyMCwxODQ3MjEwOTUsLTEyND
+MwMDY5OSwxMjQ3NTQwNzU1LC0xMzQxNzEwNDQ3XX0=
 -->
