KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -1,10 +1,11 @@
 ## สิทธิประโยชน์ทางภาษีอากร
 
 ### สิทธิขอคืนอากรตามมาตรา 29
- - ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
- - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
- - ระบุ Privilege Code 
-	1. กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
+
+1. ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
+2. ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
+ 3. ระบุ Privilege Code 
+	กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
 	2. กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
 		- การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
@@ -91,6 +92,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTczNDM3OTgyMCwxODQ3MjEwOTUsLTEyND
-MwMDY5OSwxMjQ3NTQwNzU1LC0xMzQxNzEwNDQ3XX0=
+eyJoaXN0b3J5IjpbLTEzNTE4NjQ5ODQsMTg0NzIxMDk1LC0xMj
+QzMDA2OTksMTI0NzU0MDc1NSwtMTM0MTcxMDQ0N119
 -->
