KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -5,14 +5,14 @@
 1. ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
 2. ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
  3. ระบุ Privilege Code 
-		3.1 รณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
+		- กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-		3.2 กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
+		-  กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
 				- การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
 				- ชำระอากรเต็มจำนวน 
 				- ลดเหลือกึ่งหนึ่งจากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
 				- ลดเหลือร้อยละ 5 จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ Gold Card) ให้บันทึก Exemption Rate = 95 
-			3.3 วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดยระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09) ที่ส่วนรายการในใบขนสินค้า (Deposit) ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
+		- วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดยระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09) ที่ส่วนรายการในใบขนสินค้า (Deposit) ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
 					- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
 					- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
 					- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
@@ -92,7 +92,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4NDE1Mjc1MSwxOTk4OTYxNDQ1LDE4ND
+eyJoaXN0b3J5IjpbMTI5MjcwNTgxMCwxOTk4OTYxNDQ1LDE4ND
 cyMTA5NSwtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLTEzNDE3MTA0
 NDddfQ==
 -->
