KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -7,8 +7,8 @@
  3. ระบุ Privilege Code 
 	- กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
-- กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
-				- การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
+	- กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
+4. การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
 				- ชำระอากรเต็มจำนวน 
 				- ลดเหลือกึ่งหนึ่งจากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
 				- ลดเหลือร้อยละ 5 จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ Gold Card) ให้บันทึก Exemption Rate = 95 
@@ -92,7 +92,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ4Njc5MTA2MiwxMjkyNzA1ODEwLDE5OT
+eyJoaXN0b3J5IjpbMTc4MTgyNTg4OSwxMjkyNzA1ODEwLDE5OT
 g5NjE0NDUsMTg0NzIxMDk1LC0xMjQzMDA2OTksMTI0NzU0MDc1
 NSwtMTM0MTcxMDQ0N119
 -->
