KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -16,7 +16,7 @@
 	- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
 	- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
 	- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
-	- การวางประกันให้ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล
+	- การวางประกันให้**ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล**
  
 ### สิทธิคลังสินค้าทัณฑ์บน
  - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
@@ -39,7 +39,7 @@
  - ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากรที่
 นำของเข้า (First Port) หรือโรงพักสินค้าหรือที่มั่นคง ซึ่งเป็นที่ตรวจและเก็บสินค้าดังกล่าว
  - ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)
- - 
+ 
 ### สิทธิเขตประกอบการเสรี (นิคมอุตสาหกรรม)
  - ระบุ I-EA-T = Y ที่ส่วนรายการในใบขนสินค้า
  - ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิประโยชน์ทางภาษีอากร ที่นำสินค้า
@@ -92,7 +92,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMzA4ODgzOTEsMTI5MjcwNTgxMCwxOT
+eyJoaXN0b3J5IjpbLTEyNDQwODQ0MzYsMTI5MjcwNTgxMCwxOT
 k4OTYxNDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LDEyNDc1NDA3
 NTUsLTEzNDE3MTA0NDddfQ==
 -->
