KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -135,7 +135,12 @@
 -	อัตราอากร ใช้ Tariff Code และ Tariff Sequence 
 -	การวางประกัน ให้บันทึกเงินวางประกันในช่อง Deposit Amount 
 
+![10PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-10.png)
 
+ในทางปฏิบัติ สำนักพิกัดอัตราศุลกากร โดยฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 มีภารกิจหน้าที่ และความรับผิดชอบในการพิจารณาคำขออนุมัติยกเว้นอากรตามประเภท 10 เฉพาะกรณี
+- ของที่ได้รับเอกสิทธิตามสัญญากับนานาประเทศและไม่ผ่านกรมความร่วมมือระหว่างประเทศ
+- ของที่คณะกรรมการพิจารณายกเว้นอากรนำเข้าสื่อ วัสดุ เครื่องมือและอุปกรณ์ทางการศึกษา ภายใต้ความตกลงฟลอเรนซ์ ของยูเนสโก ได้พิจารณาและเสนอกรมศุลกากรเพื่อยกเว้นอากร
+เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณา ไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเพื่อปฏิบัติพิธีการศุลกากรต่อไป
 
 ## สิทธิของนำเข้ามาเพื่อบริจาค ประเภทที่ 11 ภาค 4 
 
@@ -252,5 +257,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk1MTQxMjYyMyw4MTAyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbMTM4MTUyMDEwNCwtOTUxNDEyNjIzLDgxMD
+IxMzE1MV19
 -->
