KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -144,7 +144,7 @@
 เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณา ไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเพื่อปฏิบัติพิธีการศุลกากรต่อไป
 
 สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 (สพศ.2) กองพิกัดอัตราศุลกากร (กพก.) โทร.  0-2667-7000 ต่อ 20-5854 หรือ 5859
-[**[Reference](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_01&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_01)
+[**[Reference]**](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_01&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_01)
 
 ## สิทธิของนำเข้ามาเพื่อบริจาค ประเภทที่ 11 ภาค 4 
 
@@ -261,6 +261,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk4MzU5MTMyLC05NTE0MTI2MjMsODEwMj
-EzMTUxXX0=
+eyJoaXN0b3J5IjpbLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MT
+AyMTMxNTFdfQ==
 -->
