--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -174,6 +174,7 @@
 -	อัตราอากร ใช้ Tariff Code และ Tariff Sequence 
 -	การวางประกัน ให้บันทึกเงินวางประกันในช่อง Deposit Amount 
 
+![10PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-10.png)
 
 ## ยุทธภัณฑ์ที่ใช้ในราชการ ประเภทที่ 13 ภาค 4 
 
@@ -261,6 +262,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MT
-AyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbMTQ1MjI2NDE4MCwtMTQzMTcwMDU0OSwtOT
+UxNDEyNjIzLDgxMDIxMzE1MV19
 -->
