KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -143,7 +143,7 @@
 
 เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณา ไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเพื่อปฏิบัติพิธีการศุลกากรต่อไป
 
-สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 (สพศ.2) กองพิกัดอัตราศุลกากร (กพก.) โทร.  0-2667-7000 ต่อ 20-5854 หรือ 5859
+>สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 (สพศ.2) กองพิกัดอัตราศุลกากร (กพก.) โทร.  0-2667-7000 ต่อ 20-5854 หรือ 5859
 [**[Reference]**](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_01&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_01)
 
 ## สิทธิของนำเข้ามาเพื่อบริจาค ประเภทที่ 11 ภาค 4 
@@ -174,7 +174,22 @@
 -	อัตราอากร ใช้ Tariff Code และ Tariff Sequence 
 -	การวางประกัน ให้บันทึกเงินวางประกันในช่อง Deposit Amount 
 
-![10PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-10.png)
+![11PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-11.png)
+
+ในทางปฏิบัติ สำนักพิกัดอัตราศุลกากร โดยฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 มีภารกิจหน้าที่และความรับผิดชอบในการพิจารณาคำขออนุมัติยกเว้นอากรตามประเภท 11 ในทุกกรณี  
+  
+เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณาไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าหรือส่งออกเพื่อปฏิบัติพิธีการศุลกากรต่อไป
+
+  
+
+**กฎหมาย/ระเบียบที่เกี่ยวข้อง**
+
+1. [ประกาศกรมศุลกากร ที่ 81/2551 เรื่อง หลักเกณฑ์และเงื่อนไขสำหรับของตามภาค 4 ประเภท 11](http://www.customs.go.th/data_files/c86b11103d848f53e025fedf13e3c145.pdf)
+
+2. [ประกาศกรมศุลกากร ที่ 1/2558 เรื่อง ระเบียบปฏิบัติสำหรับการขอยกเว้นอากรของตามภาค 4 ประเภท 11 แห่งพระราชกำหนดพิกัดอัตราศุลกากร พ.ศ. 2530](http://www.customs.go.th/data_files/39e15b57c90cf9f3dd5bf87c15754d32.pdf)
+
+>สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 (สพศ.2) กองพิกัดอัตราศุลกากร (กพก.) โทร.  0-2667-7000 ต่อ 20-5854 หรือ 5859
+[**[Reference]**]([http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_02&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_02](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_02&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_02))
 
 ## ยุทธภัณฑ์ที่ใช้ในราชการ ประเภทที่ 13 ภาค 4 
 
@@ -262,6 +277,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ1MjI2NDE4MCwtMTQzMTcwMDU0OSwtOT
-UxNDEyNjIzLDgxMDIxMzE1MV19
+eyJoaXN0b3J5IjpbLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLT
+k1MTQxMjYyMyw4MTAyMTMxNTFdfQ==
 -->
