KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -189,7 +189,7 @@
 2. [ประกาศกรมศุลกากร ที่ 1/2558 เรื่อง ระเบียบปฏิบัติสำหรับการขอยกเว้นอากรของตามภาค 4 ประเภท 11 แห่งพระราชกำหนดพิกัดอัตราศุลกากร พ.ศ. 2530](http://www.customs.go.th/data_files/39e15b57c90cf9f3dd5bf87c15754d32.pdf)
 
 >สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 (สพศ.2) กองพิกัดอัตราศุลกากร (กพก.) โทร.  0-2667-7000 ต่อ 20-5854 หรือ 5859
-[**[Reference]**]([http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_02&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_02](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_02&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_02))
+[**[Reference]**](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_02&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_02)
 
 ## ยุทธภัณฑ์ที่ใช้ในราชการ ประเภทที่ 13 ภาค 4 
 
@@ -277,6 +277,6 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLT
-k1MTQxMjYyMyw4MTAyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbLTI3MjQwNjcyMCwtMjA5NDMzNDk5NCwtMT
+QzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
 -->
