KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -219,6 +219,7 @@
 -	อัตราอากร ใช้ Tariff Code และ Tariff Sequence
 -	การวางประกัน ให้บันทึกเงินวางประกันในช่อง Deposit Amount  
 
+![13PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-13.png)
 
 ## ตัวอย่างสินค้า ประเภทที่ 14 ภาค 4 
 
@@ -277,6 +278,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MjQwNjcyMCwtMjA5NDMzNDk5NCwtMT
-QzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
+eyJoaXN0b3J5IjpbNTQ1NTg5ODk1LC0yNzI0MDY3MjAsLTIwOT
+QzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MTAyMTMx
+NTFdfQ==
 -->
